--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,6 @@
-body{
-    background-color: #F5EE9E;
-}
-
 /* Elements */
-
-input{
-    margin-top: 3%;
-    width: 100%;
-    border-radius: 6px;
-}
-
 input:hover {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.94);
-}
-
-input[type=submit]{
-    width: 40%;
-    margin: auto;
-    background-color: #F49E4C;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    padding: 3%;
-    cursor: pointer;
-}
-
-span{
-    font-family: "Kanit", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-button{
-    width: 12%;
-    padding: 1%;
-    margin: auto;
-    background-color: #F49E4C;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
 }
 
 /* Classes */
@@ -51,13 +10,6 @@ button{
     text-align: center;
     font-weight: bold;
     color:#F49E4C;
-    margin-top: 4%;
-}
-
-.toRight{
-    float: right;
-    margin-top: 2%;
-    margin-right: 2%; 
 }
 
 .kanit-bold {
@@ -72,43 +24,7 @@ button{
     font-style: normal;
 }
 
-.labelField{
-    font-weight: bold;
-    margin-bottom: 3%;
-    font-family: "Kanit", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-}
-
-.customForm{
-    width: 20%;
-    border: 3px solid #F49E4C;
-    padding: 2%;
-    border-radius: 9px;
-}
-
-.center{
-    margin: auto;
-    text-align: center;
-}
-
-.centerFlex{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.warning{
-    color:#AB3428;
-    font-weight: bold;
-    font-family: "Fjalla One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
 .error-message {
-    color: #AB3428;
-    font-size: 12px;
     visibility: hidden; 
 }
 
@@ -123,16 +39,16 @@ button{
     color: #fff;
     background-color: #000;
     border: 2px solid #fff;
-    padding: 3px;
 }
 
-.high-contrast input[type=submit]{
-    background-color: yellow;
-    color: black;
-}
-
-.high-contrast button {
+.high-contrast button, button:hover {
     background-color: yellow; 
     color: black; 
     border: 2px solid #fff; 
+}
+
+.high-contrast button:hover {
+    background-color: yellow; 
+    color: black; 
+    border: 2px solid #fff;    
 }
